# sample-private-pyproject-repo

./: README.md  flake.nix  pyproject.toml
sample_private_repo/: core.py
