[tool.poetry]
name = "sample-private-repo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "sample_private_repo"}]

[tool.poetry.dependencies]
python = "^3.10"
toolz = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
